# fastapi-template

./: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yml  pyproject.toml  sample.env
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  post-cmd.sh
alembic/: env.py
alembic/versions/: 3930743075f8_init_db.py
portal/: main.py
portal/modules/core/: config.py  router.py  schema.py  security.py  test.py
portal/modules/data/: router.py  test.py
portal/modules/postgres/: __init__.py  crud.py  database.py  models.py
portal/modules/user/: router.py  schema.py  test.py
scripts/: lint.sh  start.py
