[tool.poetry]
name = "portal"
version = "0.1.0"
description = ""
authors = ["linh <linh@missingcorner.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.105.0"}
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
okta-jwt = "^1.3.5"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
numpy = "^2.2.4"
celery = "^5.4.0"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
pytest = "^7.4.3"
pre-commit = "^3.6.0"
mypy = "^1.7.1"
isort = "^5.13.2"
flake8 = "^6.1.0"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
python_files = ["*test.py"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120

[tool.poetry.scripts]
start = "scripts.start:start"
